get list of commands from xmg.ini

--- a/xmg.ini
+++ b/xmg.ini
@@ -4,3 +4,6 @@ XMG_INSTALL = %(XMG_SRCDIR)s/.install
 XMG_PYTHON_ROOTDIR = %(XMG_INSTALL)s/python
 XMG_YAP_ROOTDIR = %(XMG_INSTALL)s/yap
 XMG_DATA_ROOTDIR = %(XMG_INSTALL)s/share
+
+[COMMANDS]
+commands = compile gui install
