special-cased bootstrapping

--- a/xmg.ini
+++ b/xmg.ini
@@ -1,9 +1,10 @@
 [DEFAULT]
-XMG_SRCDIR = /home/denys/orleans/simon.petitjean/XMG-NG.denys
-XMG_INSTALL = %(XMG_SRCDIR)s/.install
-XMG_PYTHON_ROOTDIR = %(XMG_INSTALL)s/python
-XMG_YAP_ROOTDIR = %(XMG_INSTALL)s/yap
-XMG_DATA_ROOTDIR = %(XMG_INSTALL)s/share
+xmg_srcdir = /home/denys/orleans/simon.petitjean/XMG-NG.denys
+xmg_install = %(XMG_SRCDIR)s/.install
+xmg_python_rootdir = %(XMG_INSTALL)s/python
+xmg_yap_rootdir = %(XMG_INSTALL)s/yap
+xmg_data_rootdir = %(XMG_INSTALL)s/share
 
 [COMMANDS]
-commands = compile gui install
+commands = bootstrap install
+
