--- a/xmg.ini
+++ b/xmg.ini
@@ -6,5 +6,5 @@ xmg_yap_rootdir = %(XMG_INSTALL)s/yap
 xmg_data_rootdir = %(XMG_INSTALL)s/share
 
 [COMMANDS]
-commands = bootstrap install
+commands = bootstrap install gui compile startcontrib
 
