pull XMG-NG.denys

--- a/xmg.ini
+++ b/xmg.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
-xmg_srcdir = /home/denys/orleans/simon.petitjean/XMG-NG.denys
+
+xmg_srcdir = /home/simon/Bureau/XMG-NG
 xmg_install = %(XMG_SRCDIR)s/.install
 xmg_python_rootdir = %(XMG_INSTALL)s/python
 xmg_yap_rootdir = %(XMG_INSTALL)s/yap
