--- a/contributions/synsemCompiler/compilers/synsem/compiler.yml
+++ b/contributions/synsemCompiler/compilers/synsem/compiler.yml
@@ -4,8 +4,8 @@ mg:
 decls:
   ODecl: feats
 control:
-  _Stmt: caller dimstar
-dimstar:
+  _Stmt: caller stardim
+stardim:
   _Dim: dim_sem dim_syn dim_iface
   _Constraint: iface
   proxy: dim_iface
