--- a/contributions/synsemCompiler/compilers/synsem/compiler.yml
+++ b/contributions/synsemCompiler/compilers/synsem/compiler.yml
@@ -2,7 +2,7 @@ mg:
   _Stmt: control
   _EDecls: decls
 decls:
-  ODecl: feats
+  _ODecl: feats
 control:
   _Stmt: caller stardim
 stardim:
@@ -11,9 +11,9 @@ stardim:
 avm: 
   _Value: value
 value: 
-  Else: avm adisj
+  _Else: avm adisj
 syn:
-  AVM: avm
+  _AVM: avm
 iface:
   _AVM: avm
 dim_syn:
