language in GUI

--- a/contributions/core/pylibs/treeview/config.cfg
+++ b/contributions/core/pylibs/treeview/config.cfg
@@ -12,6 +12,6 @@ fontcolor = #000000
 font = Arial
 
 [GENERAL]
-lang = FRA
-xmgpath = /home/howiepowie/pytreeview/xmg.sim
+lang = ENG
+xmgpath = ../../..
 
