changed data structure for brick connections to ordered dict

--- a/contributions/synframeCompiler/compilers/synframe/compiler.yml
+++ b/contributions/synframeCompiler/compilers/synframe/compiler.yml
@@ -8,7 +8,7 @@ control:
   _Expr: value
 avm: 
   _Value: value
-  _Expr: value
+  _Expr: value_expr
 value: 
   _Else: avm adisj avm.Dot control.Call
 syn:
