--- a/contributions/syn2frameCompiler/compilers/syn2frame/compiler.yml
+++ b/contributions/syn2frameCompiler/compilers/syn2frame/compiler.yml
@@ -8,7 +8,7 @@ control:
   _Expr: value
 avm: 
   _Value: value
-  _Expr: value
+  _Expr: value_expr
 value: 
   _Else: avm adisj avm.Dot control.Call
 syn2:
@@ -17,6 +17,7 @@ iface:
   _AVM: avm
 dim_frame:
   tag: "frame"
+  solver: "framedoms"
   Stmt: frame
   Expr : value
 dim_syn:
